<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/pembelian"
        android:icon="@drawable/ic_cart"
        android:title="@string/title_pembelian"
        android:enabled="true"
        />
    <item
        android:id="@+id/gallery"
        android:icon="@drawable/ic_browse"
        android:title="@string/title_gallery"
        android:enabled="true"
        />
    <item
        android:id="@+id/penjualan"
        android:icon="@drawable/ic_sell"
        android:title="@string/title_penjualan"
        android:enabled="true"/>
    <item
        android:id="@+id/data_admin"
        android:icon="@drawable/ic_person"
        android:title="@string/title_data_admin"
        android:enabled="true"/>
</menu>