<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditDataGalleryActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_data_gallery"
        android:textStyle="bold"
        android:textSize="40dp"
        android:textAlignment="center"
        android:layout_marginBottom="40dp"/>

    <EditText
        android:id="@+id/edit_text_id_pembelian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id_pembelian_input"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_form_add_data"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/edit_text_deskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/deskripsi_input"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_form_add_data"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/edit_text_kategori"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/kategori_input"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_form_add_data"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/edit_text_harga_jual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/harga_jual_input"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_form_add_data"
        android:padding="10dp"/>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/update"
        android:backgroundTint="@color/button_edit"
        />

</LinearLayout>